# AltierTravelAgent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
evals/: README.md  eval_queries.jsonl  profile_eval_queries.jsonl
legacy/tests_old/: conftest.py  test_expanded.py  test_hubsplit_agent.py  test_models.py  test_orchestrator.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_ranking.py  test_risk.py
scripts/: demo_interactive_transcript.py  final_codex_acceptance.py  run_eval.py  run_profile_eval.py  smoke_real_tools.py
src/travel_agent/: api.py  cli.py  config.py  main.py
src/travel_agent/agents/: base.py  booking_stub_agent.py  clarification_agent.py  constraint_agent.py  conversation_requirement_agent.py  conversation_state_agent.py  explanation_agent.py  flight_retrieval_agent.py  followup_agent.py  hubsplit_agent.py  intake_agent.py  intent_router_agent.py  preference_agent.py  ranking_agent.py  result_critic_agent.py  risk_compliance_agent.py  (+4 more)
tests/: helpers_v03.py  test_ci_safety.py  test_constraint_checker.py  test_cost_estimator.py  test_eval_dialogues.py  test_itinerary_builder.py  test_llm_first_architecture.py  test_no_internal_leakage.py  test_real_tools.py  test_response_renderer.py  test_server_api.py  test_session_store.py  test_streaming_output.py  test_v03_eval_dialogues.py  test_web_render_contract.py  test_web_streaming.py
(+100 files in other folders)
